--- a/static/index.html
+++ b/static/index.html
@@ -552,8 +552,8 @@
         <!-- 主内容区域 -->
         <div class="main-container">
             <div class="header">
-                <h1>MCP Inspector</h1>
-                <p>管理和监控您的 MCP 服务器</p>
+                <h1>MCP Cat</h1>
+                <p>管理您的 MCP 服务器</p>
             </div>
 
             <div class="main-content">
