--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MCPCat 服务器管理</title>
+    <title>mcpcat 服务器管理</title>
     <style>
         * {
             margin: 0;
@@ -794,7 +794,7 @@
             <div class="sidebar-header">
                 <div class="logo">
                     <div class="logo-icon">🔧</div>
-                    <span class="logo-text">MCPCat</span>
+                    <span class="logo-text">mcpcat</span>
                 </div>
             </div>
             <nav class="sidebar-nav">
@@ -816,7 +816,7 @@
         <!-- 主内容区域 -->
         <div class="main-container">
             <div class="header">
-                <h1>MCP Cat</h1>
+                <h1>mcpcat</h1>
                 <p>管理您的 MCP 服务器</p>
             </div>
 
