--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mcpcat 服务器管理</title>
+    <link rel="icon" href="/static/favicon.ico">
     <style>
         * {
             margin: 0;
