feat(sidebar): 更换logo图标为自定义图片
- 将原有的emoji logo图标 🔧 替换为自定义的图片logo
- 添加了 logo40x40-white.png 图片资源
- 设置图片尺寸为24x24像素并添加alt属性
```

--- a/static/index.html
+++ b/static/index.html
@@ -1117,7 +1117,9 @@
         <div class="sidebar">
             <div class="sidebar-header">
                 <div class="logo">
-                    <div class="logo-icon">🔧</div>
+                    <div class="logo-icon">
+                        <img src="/static/logo40x40-white.png" alt="mcpcat" style="width: 24px; height: 24px;">
+                    </div>
                     <span class="logo-text">mcpcat</span>
                 </div>
             </div>
